# libmidi

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
include/: buffer.h  errors.h  event.h  midi.h  midi_input_device.h  mthd.h  mtrk.h  protocol.h  util.h  vlv.h
include/events/: channel_pressure.h  control.h  key_pressure.h  meta.h  note.h  pitch.h  program_change.h
include/events/meta/: tempo.h  text.h
include/libmidi/: buffer.h  errors.h  event.h  file.h  midi_input_device.h  mthd.h  mtrk.h  protocol.h  util.h  vlv.h
include/libmidi/event/: channel_pressure.h  control.h  key_pressure.h  meta.h  note.h  pitch.h  program_change.h
include/libmidi/event/meta/: channel.h  channel_prefix.h  key_signature.h  m_live_tag.h  port.h  proprietary.h  sequence_number.h  smpte_offset.h  tempo.h  text.h  time_signature.h  united.h
include/libmidi/event/standard/: channel_pressure.h  control.h  key_pressure.h  note.h  pitch.h  program_change.h  united.h
include/libmidi/event/system/: mtc_quarter_frame.h  song_position.h  song_select.h  sysex.h  united.h
include/libmidi/events/: channel_pressure.h  control.h  key_pressure.h  meta.h  note.h  pitch.h  program_change.h
include/libmidi/events/meta/: text.h
src/: buffer.c  buffer.h  device.c  device.h  event.c  event.h  file.c  file.h  input_device.c  input_device.h  input_state_machine.c  input_state_machine.h  midi.c  midi_input_device.c  midi_input_device.h  mthd.c  mthd.h  mtrk.c  mtrk.h  protocol.h  util.c  util.h  vlv.c  vlv.h
src/event/: channel_pressure.c  control.c  key_pressure.c  note.c  pitch.c  program_change.c
src/event/meta/: channel.c  channel_prefix.c  key_signature.c  m_live_tag.c  port.c  proprietary.c  sequence_number.c  smpte_offset.c  tempo.c  text.c  time_signature.c
src/event/standard/: channel_pressure.c  control.c  key_pressure.c  note.c  pitch.c  program_change.c
src/event/system/: mtc_quarter_frame.c  song_position.c  song_select.c  sysex.c
src/events/: channel_pressure.c  channel_pressure.h  control.c  control.h  key_pressure.c  key_pressure.h  meta.c  meta.h  note.c  note.h  pitch.c  pitch.h  program_change.c  program_change.h
src/events/meta/: tempo.c  text.c  text.h  time_signature.c  time_signature.h
tests/: CMakeLists.txt
tests/src/: main.cpp  midi_input_device.cpp  mthd.cpp  mtrk.cpp  protocol.cpp  util.cpp  vlv.cpp
tests/src/event/: channel_pressure.cpp  control.cpp  key_pressure.cpp  note.cpp  pitch.cpp  program_change.cpp
tests/src/event/meta/: tempo.cpp  text.cpp  time_signature.cpp
tests/src/events/: channel_pressure.cpp  control.cpp  key_pressure.cpp  note.cpp  pitch.cpp  program_change.cpp
tests/src/events/meta/: tempo.cpp  text.cpp  time_signature.cpp
tools/: CMakeLists.txt
tools/common/: CMakeLists.txt
tools/common/include/common/: driver.hpp  eventPrint.hpp
tools/midi-decoder/: CMakeLists.txt
tools/midi-decoder/src/: main.cpp
tools/playground/: CMakeLists.txt
tools/playground/src/: main.cpp
